# ffmpeg-cpp3

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  run.sh  run_rtmp.sh  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json
demos/decode_audio/: CMakeLists.txt
demos/decode_video/: CMakeLists.txt
demos/demo/: CMakeLists.txt
demos/difference/: CMakeLists.txt
demos/encode_audio/: CMakeLists.txt
demos/remuxing/: CMakeLists.txt  remuxing.cpp
demos/rtsp_to_rtmp/: CMakeLists.txt  rtsp_to_rtmp.cpp
entrypoint/: CMakeLists.txt  EntryPoint.cpp  event_label.h  logging.cpp  logging.h  main.cpp
inc/: CodecDeducer.h  CoreContext.h  CoreObject.h  FFmpegException.h  FFmpegResource.h  FrameContainer.h  OpenCodec.h  ffmpeg.h
inc/Demuxing/: AudioInputStream.h  InputStream.h  StreamData.h  VideoInputStream.h
inc/FrameSinks/: FrameSink.h  FrameSinkStream.h  FrameWriter.h
inc/Info/: AudioStreamInfo.h  ContainerInfo.h  VideoStreamInfo.h
inc/SimpleInputOutput/: InputToMessageQueue.h  OutputFromMessageQueue.h
inc/Sources/: Demuxer.h  InputSource.h
sources/: FFmpegException.cpp  FFmpegException.h  OpenCodec.cpp
sources/Codecs/: H264Codec.cpp  H264_VAAPICodec.cpp  VideoCodec.cpp
sources/FrameSinks/: Filter.cpp  Filter.h
sources/Info/: ContainerInfo.h
sources/Muxing/: AudioOutputStream.cpp  Muxer.cpp  Muxer.h
sources/Sources/: Demuxer.cpp  Demuxer.h  EncodedFileSource.cpp  EncodedFileSource.h  RawAudioFileSource.cpp  RawAudioFileSource.h  RawVideoFileSource.cpp  RawVideoFileSource.h
src/: CodecDeducer.cpp  CoreContext.cpp  CoreObject.cpp  FFmpegException.cpp  FrameContainer.cpp  OpenCodec.cpp  main2.cpp
src/Demuxing/: AudioInputStream.cpp  InputStream.cpp  VideoInputStream.cpp
src/FrameSinks/: FrameSinkStream.cpp
src/SimpleInputOutput/: InputToMessageQueue.cpp  OutputFromMessageQueue.cpp
src/Sources/: Demuxer.cpp  InputSource.cpp
tests/: CMakeLists.txt  test.cpp
utils/: CMakeLists.txt
utils/inc/: logging.h
utils/src/: logging.cpp
